Register page functional

--- a/front-end/src/main.css
+++ b/front-end/src/main.css
@@ -9,3 +9,8 @@
     margin-left: 20%;
     margin-right: 20%;
 }
+.registration{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
